PR 55202: disable swapping if we started it due to low ram